# emerald

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/static/: dynamic_bodies.wasm  index.html  quad.js
docs/: book.toml
docs/src/: README.md  SUMMARY.md  aseprite.md  audio.md  input.md  portability.md  rendering.md  worlds.md
docs/src/worlds/: queries.md  spawning.md
editor/: Cargo.toml
editor/cli/: Cargo.toml
editor/cli/src/: main.rs
editor/desktop/: Cargo.toml
editor/desktop/src/: main.rs
editor/editor/: Cargo.toml
editor/editor-core/: Cargo.toml
editor/editor-core/src/: generate_component.rs  generate_event.rs  generate_event_handler.rs  generate_module.rs  generate_system.rs  lib.rs
editor/editor/src/: game.rs
editor/src/: app.rs
emerald/: Cargo.toml  README.md  clippy.toml
emerald/examples/: aseprite.rs  audio.rs  autotilemap.rs  bunnymark.rs  buttons.rs  camera.rs  draw_color_tri.rs  ent.rs  gamepads.rs  hotreload.rs  input_actions.rs  labels.rs  load_world_file.rs  logging.rs  mouse.rs  navigation.rs  physics.rs  physics_groups.rs  physics_joints.rs  profiler.rs  raycast.rs  render_to_texture.rs  shapes.rs  sprites.rs  tilemap.rs  touch.rs  window_manipulation.rs  world_merging.rs
emerald/examples/assets/: bunny.ent  example.wrld  sample_prefab.json  smiley.aseprite
emerald/js/: emerald.js
emerald/src/: assets.rs  audio.rs  colors.rs  core.rs  events.rs  input.rs  lib.rs  profiling.rs  rendering.rs  resources.rs  schedule.rs  system.rs  types.rs  world.rs  world_stack.rs
emerald/src/assets/: asset_engine.rs  asset_key.rs  asset_loader.rs  asset_storage.rs  asset_store.rs  file_loader.rs  writer.rs
emerald/src/audio/: engine.rs  handler.rs  mixer.rs  sound.rs
emerald/src/audio/components/: sound_player.rs
emerald/src/audio/mixer/: dummy.rs  kira_backend.rs
emerald/src/core/: components.rs  engine.rs  error.rs  game.rs  game_engine.rs  game_settings.rs  project.rs
emerald/src/core/components/: autotilemap.rs  tilemap.rs  transform.rs
emerald/src/input/: button_state.rs  engine.rs  handler.rs  input_engine.rs  input_handler.rs  input_types.rs  mouse_state.rs  systems.rs  touch_state.rs
emerald/src/input/components/: ui_button.rs
emerald/src/input/systems/: ui_button.rs
emerald/src/logging/: engine.rs
emerald/src/profiling/: profile_cache.rs
emerald/src/rendering/: components.rs  font.rs  render_settings.rs  rendering_engine.rs  rendering_handler.rs  shaders.rs  texture.rs
emerald/src/rendering/components/: anim_sprite.rs  aseprite.rs  camera.rs  color_polygon.rs  color_tri.rs  gfx_stack.rs  label.rs  sprite.rs
emerald/src/rendering/shaders/: textured_quad.rs  textured_quad.wgsl
emerald/src/types/: polygon.rs
emerald/src/world/: ent.rs  navigation.rs  physics.rs  world_physics_loader.rs
emerald/src/world/ent/: ent_aseprite_loader.rs  ent_color_rect_loader.rs  ent_label_loader.rs  ent_rigid_body_loader.rs  ent_sound_player_loader.rs  ent_sprite_loader.rs  ent_transform_loader.rs  schemas.rs
emerald/src/world/ent/schemas/: sprite_schema.rs
emerald/src/world/physics/: handler.rs  physics_engine.rs  physics_handler.rs  types.rs
emerald_default_runner/: Cargo.toml  README.md
examples/: aseprite.rs  audio.rs  bunnymark.rs  buttons.rs  gamepads.rs  hotreload.rs  labels.rs  logging.rs  mouse.rs  physics.rs  physics_groups.rs  raycast.rs  render_to_texture.rs  sprites.rs  tilemap.rs  touch.rs  user_data.rs  window_management.rs  world_merging.rs
examples/aseprite/: main.rs
examples/assets/: smiley.json  test.aseprite
examples/audio/: main.rs
examples/bunnymark/: main.rs
examples/color_rect/: main.rs
examples/dynamic_bodies/: main.rs
examples/fonts/: main.rs
examples/hello_world/: main.rs
examples/prefabs/: main.rs
examples/sprite/: main.rs
examples/sprite_scaling/: main.rs
runners/emd_desktop/: Cargo.toml
runners/emd_desktop/examples/: sample.rs
runners/emd_desktop/src/: audio.rs  file_loader.rs  input.rs  lib.rs  rendering.rs
runners/emd_desktop/src/audio/: audio_engine.rs  mixer.rs  sound.rs
runners/emd_desktop/src/input/: input_engine.rs
runners/emd_desktop/src/rendering/: rendering_engine.rs  shaders.rs  texture.rs
runners/emd_desktop/src/rendering/shaders/: textured_quad.rs  textured_quad.wgsl
runners/emd_headless/: Cargo.toml
runners/emd_headless/src/: lib.rs
scripts/: enable_cross_compiling_win10.sh
src/: assets.rs  audio.rs  colors.rs  core.rs  input.rs  lib.rs  logging.rs  rendering.rs  types.rs  world.rs
src/assets/: aseprite_parsing.rs  asset_loader.rs  asset_store.rs  cache.rs  loader.rs  loading.rs  writer.rs
src/assets/loading/: loader.rs  prefabs.rs
src/audio/: engine.rs  handler.rs  mixer.rs  sound.rs
src/audio/mixer/: dummy.rs  kira_backend.rs
src/core/: components.rs  emerald.rs  engine.rs  error.rs  game.rs  game_settings.rs
src/core/components/: autotilemap.rs  tilemap.rs  transform.rs
src/input/: button_state.rs  components.rs  engine.rs  handler.rs  mouse_state.rs  touch_state.rs
src/input/components/: ui_button.rs
src/input/systems/: ui_button.rs
src/logging/: engine.rs  handler.rs
src/profiling/: profile_settings.rs  profiler.rs
src/rendering/: components.rs  engine.rs  font.rs  handler.rs  pipelines.rs  render_settings.rs  renderable.rs  shaders.rs  sprite_batch.rs  texture.rs  texture_meta.rs  textured_quad.rs  textured_triangle.rs
src/rendering/components/: aseprite.rs  camera.rs  color_rect.rs  label.rs  sprite.rs  tilemap.rs
src/rendering/shaders/: texture.frag  texture.vert
src/world/: emerald_world.rs  engine.rs  entity.rs  handler.rs  physics.rs  world.rs
src/world/physics/: components.rs  engine.rs  handler.rs  handler_ref.rs  types.rs
src/world/physics/components/: physics_body_handle.rs
static/: index.html
static/examples/: bunnymark.d  bunnymark.js  bunnymark.wasm
tests/: aseprite.rs
