[package]
name = "emerald"
version = "0.1.1"
authors = ["Bombfuse <eiffeldud@gmail.com>"]
edition = "2018"
description = "A lite, fully featured 2D game engine."
repository = "https://github.com/Bombfuse/emerald"
license = "MIT OR Apache-2.0"
resolver = "2"

[features]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default = ["logging", "gamepads", "physics", "audio"]
logging = ["miniquad/log-impl"]
audio = ["kira"]
physics = ["rapier2d"]
gamepads = ["gamepad"]
headless = []

[dependencies]
image = { version = "0.23.14", default-features = false, features = [ "png" ] }
glam = { version = "0.14.0", default-features = false, features = ["libm"] }
quad-rand = "0.2.1"
fontdue = "0.4.0"
nanoserde = "0.1.25"
hecs = { version = "0.5.1", default-features = false }
nalgebra =  { version = "0.26.2" }

# Optionals
rapier2d = { version = "0.8.0", default-features = false, features = [ "dim2", "f32" ], optional = true  }
gamepad = { version = "0.1.1", optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
miniquad = { version = "0.3.0-alpha.30", features = [ "log-impl" ] }
# mp3 does not works on wasm :(
kira = { version= "0.5.2", optional = true, default-features = false, features = ["ogg", "flac", "wav"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
miniquad = "0.3.0-alpha.30"
kira = { version= "0.5.2", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
sapp-android = "0.1.8"

[lib]
name = "emerald"
path = "src/lib.rs"
