[package]
name = "emerald"
version = "0.1.1"
authors = ["Bombfuse <eiffeldud@gmail.com>"]
edition = "2018"
description = "A lite, fully featured 2D game engine."
repository = "https://github.com/Bombfuse/emerald"
license = "MIT OR Apache-2.0"
resolver = "2"

[features]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default = ["logging", "gamepads", "physics", "audio"]
logging = ["miniquad/log-impl"]
physics = ["rapier2d"]
gamepads = ["gamepad"]
headless = []
audio = ["kira"]

[dependencies]
image = { version = "0.23.14", default-features = false, features = [ "png" ] }
glam = { version = "0.17.1", default-features = false, features = ["libm"] }
quad-rand = "0.2.1"
fontdue = "0.5.2"
nanoserde = "0.1.28"
hecs = { version = "0.5.2", default-features = false }
nalgebra =  { version = "0.27.1" }

# Optionals
rapier2d = { version = "0.9.2", optional = true  }
gamepad = { version = "0.1.1", optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
miniquad = { version = "0.3.0-alpha.37", features = [ "log-impl" ] }
kira = { version= "0.5.2", optional = true, default-features = false, features = ["ogg", "flac", "wav"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
miniquad = "0.3.0-alpha.37"
kira = { version= "0.5.2", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
sapp-android = "0.1.8"

[lib]
name = "emerald"
path = "src/lib.rs"
