[package]
name = "emerald"
version = "0.2.0"
authors = ["Bombfuse <eiffeldud@gmail.com>"]
edition = "2018"
description = "A lite, fully featured 2D game engine."
repository = "https://github.com/Bombfuse/emerald"
license = "MIT OR Apache-2.0"
resolver = "2"

[features]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default = ["logging", "gamepads", "physics", "aseprite", "audio"]
logging = ["miniquad/log-impl"]
physics = ["rapier2d"]
gamepads = ["gamepad"]
headless = []
hotreload = []
aseprite = ["asefile"]
audio = ["kira"]

[dependencies]
image = { version = "0.23.14", default-features = false, features = [ "png" ] }
glam = { version = "0.17.1", default-features = false, features = ["libm"] }
quad-rand = "0.2.1"
fontdue = "0.6.2"
nanoserde = "0.1.29"
hecs = { version = "0.7.6", default-features = false }
nalgebra =  { version = "0.31.0", features = ["convert-glam017"] }

# Optionals
rapier2d = { version = "0.12.0", optional = true  }
gamepad = { version = "0.1.4", optional = true }
asefile =  { version = "0.3.4", optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
miniquad = { version = "0.3.5", features = [ "log-impl" ] }
kira = { version= "0.5.3", optional = true, default-features = false, features = ["ogg", "flac", "wav"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
miniquad = "0.3.5"
kira = { version= "0.5.3", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
sapp-android = "0.1.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winerror", "knownfolders", "shtypes", "shlobj", "combaseapi"] }

[lib]
name = "emerald"
path = "src/lib.rs"
