[package]
name = "emerald"
version = "0.3.14"
authors = ["Bombfuse <eiffeldud@gmail.com>"]
edition = "2018"
description = "A lite, fully featured 2D game engine."
repository = "https://github.com/Bombfuse/emerald"
license = "MIT OR Apache-2.0"
resolver = "2"

[features]
default = ["gamepads", "aseprite", "audio"]
audio = ["kira"]
gamepads = ["gamepad"]
aseprite = ["asefile"]
hotreload = []

[dependencies]
fontdue = "0.7.2"
toml = "0.5.9"
serde_json = "1.0"
wgpu = "0.14.0"
env_logger = "0.9.1"
pollster = "0.2.5"
winit = "0.27.4"
rapier2d = "0.15.0"
instant = "0.1.12"
hecs = { version = "0.9", default-features = false }
image = { version = "0.23.14", default-features = false, features = [ "png" ] }
serde = { version = "1.0.145", features=["derive"] }
bytemuck = { version = "1.12.1", features = ["derive"] }

# Optionals
gamepad = { version = "0.1.5", optional = true }
asefile =  { version = "0.3.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
kira = { version= "0.5.3", optional = true, default-features = false, features = ["ogg", "flac", "wav"] }
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.17"
wgpu = { version = "0.14.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}


[target.'cfg(not(target_arch="wasm32"))'.dependencies]
kira = { version= "0.5.3", optional = true, default-features = false, features = ["ogg", "flac", "wav"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winerror", "knownfolders", "shtypes", "shlobj", "combaseapi"] }

[target.'cfg(target_os = "android")'.dependencies]
sapp-android = "0.1.9"
ndk-glue = "0.7.0"

[lib]
name = "emerald"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
