[package]
name = "emerald"
version = "0.3.214"
authors = ["Bombfuse <eiffeldud@gmail.com>"]
edition = "2018"
description = "A lite, fully featured 2D game engine."
repository = "https://github.com/Bombfuse/emerald"
license = "MIT OR Apache-2.0"
resolver = "2"

[lib]
name = "emerald"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[features]
default = []
hotreload = []
physics-deterministic = ["rapier2d/enhanced-determinism"]

[dependencies]
fontdue = "0.7.2"
toml = "0.5.9"
serde_json = "1.0"
env_logger = "0.9.1"
rapier2d = "0.15.0"
instant = "0.1.12"
emd_earcutr = "0.1.0"
hecs = { version = "0.9", default-features = false }
image = { version = "0.23.14", default-features = false, features = [ "png" ] }
serde = { version = "1.0.145", features=["derive"] }
bytemuck = { version = "1.12.1", features = ["derive"] }
asefile =  { version = "0.3.4" }
anymap = { version = "0.12.1", default-features = false }


[dev-dependencies]
emd_desktop = { path = "../runners/emd_desktop" }